# brockers

./: pyproject.toml
.github/: python.yml
.github/workflows/: python.yml
framework/helpers/: account_helper.py
framework/helpers/kafka/consumers/: register_events.py  register_events_errors.py
framework/helpers/kafka/publishers/: __init__.py  register_events.py  register_events_errors.py
framework/helpers/rmq/consumers/: dm_mail_sending.py
framework/helpers/rmq/publishers/: dm_mail_sending.py
framework/internal/: singleton.py
framework/internal/http/: account.py  mail.py
framework/internal/http/account/: account.py  endpoints.py
framework/internal/http/mail/: endpoints.py  mail.py
framework/internal/http/models/: ErrorMessage.py  error_message.py  rmq_message_mail_body.py  user_payload.py
framework/internal/kafka/: consumer.py  producer.py  publisher.py  subscriber.py
framework/internal/rmq/: __init__.py  base_publisher.py  consumer.py  publisher.py
framework/settings/: __init__.py  settings.py
framework/tests/: conftest.py  test_registration.py
