[tool.poetry]
name = "brockers"
version = "0.1.0"
description = ""
authors = ["Виктор Лобынцев <sibfight@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.28.1"
pytest = "^9.0.2"
kafka-python = "^2.3.0"
pydantic-settings = "^2.7.0"
pika = "^1.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
